fix: country dropdown visibility (#1124)

--- a/src/auth-components/country-phone-input/country-phone-input.scss
+++ b/src/auth-components/country-phone-input/country-phone-input.scss
@@ -94,6 +94,7 @@
     list-style-type: none;
     border-bottom-right-radius: 6px;
     border-bottom-left-radius: 6px;
+    z-index: 1;
 
     box-sizing: border-box;
 
